force-app/main/default/objects/Project_Team_Member__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>IF(NOT(ISBLANK(User__c)), User__r.Email,
IF(NOT(ISBLANK(Contact__c)), Contact__r.Email,
&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>