force-app/main/default/objects/Project_Team_Member__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>IF(NOT(ISBLANK(User__c)), User__r.FirstName + &apos; &apos; + User__r.LastName,
IF(NOT(ISBLANK(Contact__c)), Contact__r.FirstName + &apos; &apos; + Contact__r.LastName,
&apos;Not set&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>