force-app/main/default/objects/Project_Team_Member__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>IF(NOT(ISBLANK(User__c)),  User__r.MobilePhone ,
IF(NOT(ISBLANK(Contact__c)),  Contact__r.MobilePhone ,
&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>