force-app/main/default/objects/Project_Team_Member__c/fields/Receive_Weekly_Status_Report__c.field-meta.xml
<CustomField>
    <fullName>Receive_Weekly_Status_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Weekly Status Report</label>
    <type>Checkbox</type>
</CustomField>