force-app/main/default/objects/Project_Team_Member__c/fields/Toggl_ID__c.field-meta.xml
<CustomField>
    <fullName>Toggl_ID__c</fullName>
    <externalId>true</externalId>
    <label>Toggl ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>