force-app/main/default/objects/Project_Team_Member__c/fields/Toggl_Manager__c.field-meta.xml
<CustomField>
    <fullName>Toggl_Manager__c</fullName>
    <formula>User__r.Toggl_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Toggl Manager</label>
    <type>Checkbox</type>
</CustomField>