force-app/main/default/objects/Project_Team_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>